Fixed some layout issues with hierarchy view (#33)

--- a/web/onos-gui/src/app/nav/nav.component.css
+++ b/web/onos-gui/src/app/nav/nav.component.css
@@ -32,6 +32,10 @@ html[data-platform='iPad'] #nav {
     top: 60px;
 }
 
+#nav div {
+    text-align: start;
+}
+
 #nav .nav-hdr {
     font-weight: bold;
     font-variant: small-caps;
